apps/fountain-demos/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fountain-demos
  namespace: managoat-demos
  labels:
    app: fountain-demos
spec:
  type: ClusterIP
  selector:
    app: fountain-demos
  ports:
    - port: 80
      targetPort: 8080
